# dodo-boy

./: .gitignore  .mypy.ini  LICENSE  README.md  config.json  py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dodo/: __main__.py  config.py  config_test.py  display.py  dodotypes.py  time_utils.py  trip_entur_org.py  trip_entur_org_test.json  trip_entur_org_test.py  weather_met_no.py  weather_met_no_test.json  weather_met_no_test.py
dodo/PIL/: __init__.pyi
dodo/arrow/: __init__.pyi
dodo/font_roboto/: __init__.pyi
dodo/inky/: __init__.pyi
